compiler-plugin/src/testData/reference/errors/MustExtendBase.kt
package reference.errors

@ExportReferences
<!SYMBOL_EXPORT_REFERENCE_MUST_EXTEND_BASE!>object Test<!> {
}

